# swiss_hacks_msunique

./: .gitignore  .gitmodules  README.md  extract_kpis.ipynb  notebook.ipynb  pyproject.toml
data/kpis/: ABB_2021.json  ABB_2022.json  ABB_2023.json  IBM_2021.json  IBM_2022.json  IBM_2023.json  PostFinance_2021.json  PostFinance_2022.json  PostFinance_2023.json  Raiffeisen_2021.json  Raiffeisen_2022.json  Raiffeisen_2023.json  Siemens_2021.json  Siemens_2022.json  Siemens_2023.json
src/: app.py
src/chainlit/: app.py
src/ingestion/: _parse_file.py  embedding.py  report.py
src/knowledge_graph/: build_knowledge_graph.py  schema.py
src/llm_agents/: base.py
src/llm_agents/interpreter/: agent.py
src/llm_agents/kpi_extraction/: agent.py  extraction_agent.py  extraction_prompts.py  prompt.py  prompts.py
src/llm_agents/kpi_formula_finder/: agent.py  prompts.py
src/llm_agents/kpi_simple_extraction/: agent.py  prompts.py
src/llm_agents/multi_doc_rag/: agent.py
src/llm_agents/rag/: agent.py  prompts.py
src/streamlit/: Metrics_📊.py  Upload_Report_⬆️.py  app.py
src/streamlit/.streamlit/: config.toml  secrets.toml
src/streamlit/helpers/: helpers.py
src/streamlit/pages/: Chatbot.py  Metrics_📊.py  Upload_Report_⬆️.py
src/streamlit/pages/helpers/: helpers.py
