[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
langchain-core = "^0.2.10"
ruff = "^0.5.0"
langchain-text-splitters = "^0.2.2"
openai = "^1.35.7"
ipykernel = "^6.29.4"
pydantic = "^2.7.4"
python-dotenv = "^1.0.1"
tiktoken = "^0.7.0"
faiss-cpu = "^1.8.0.post1"
chainlit = "^1.1.305"
streamlit = "^1.36.0"
scikit-learn = "^1.5.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]